--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
     "angular": "^1.3.x",
+    "angular-route": "^1.3.x",
     "angular-animate": "v1.3.x",
     "angular-aria": "^1.3.x",
     "angular-material": "^0.9.0"
