--- a/bower.json
+++ b/bower.json
@@ -10,9 +10,9 @@
     "angular-route": "^1.3.x",
     "angular-animate": "v1.3.x",
     "angular-aria": "^1.3.x",
-    "angular-material": "^0.9.0"
+    "angular-material": "^0.10.0",
+    "showdown":"^1.2.0"
   },
   "devDependencies": {
-    "angular-material": "~0.9.0"
   }
 }
